# turul-a2a

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  proto
.claude/agents/: a2a-spec-compliance.md
crates/turul-a2a/: Cargo.toml  README.md
crates/turul-a2a-auth/: Cargo.toml  README.md
crates/turul-a2a-auth/src/: api_key.rs  bearer.rs  lib.rs
crates/turul-a2a-auth/tests/: auth_integration.rs  no_debug_guards.rs
crates/turul-a2a-aws-lambda/: Cargo.toml  README.md
crates/turul-a2a-aws-lambda/src/: adapter.rs  auth.rs  builder_tests.rs  durable.rs  event.rs  lib.rs  no_streaming.rs  scheduled_recovery.rs  scheduled_recovery_tests.rs  stream_recovery.rs  stream_recovery_tests.rs
crates/turul-a2a-aws-lambda/tests/: sqs_durable_tests.rs
crates/turul-a2a-client/: Cargo.toml  README.md
crates/turul-a2a-client/src/: builders.rs  error.rs  grpc.rs  lib.rs  prelude.rs  response.rs  sse.rs
crates/turul-a2a-client/tests/: client_tests.rs
crates/turul-a2a-proto/: Cargo.toml  README.md  build.rs
crates/turul-a2a-proto/src/: lib.rs
crates/turul-a2a-types/: Cargo.toml  README.md
crates/turul-a2a-types/src/: artifact.rs  error.rs  lib.rs  message.rs  pbjson.rs  push_config.rs  state_machine.rs  task.rs  wire.rs
crates/turul-a2a/src/: card_builder.rs  compat_v03.rs  durable_executor.rs  error.rs  event_sink.rs  executor.rs  jsonrpc.rs  lib.rs  prelude.rs  router.rs  server.rs  streaming.rs
crates/turul-a2a/src/grpc/: auth.rs  error.rs  mod.rs  service.rs  streaming.rs
crates/turul-a2a/src/middleware/: bearer.rs  context.rs  error.rs  layer.rs  mod.rs  stack.rs  traits.rs  transport.rs
crates/turul-a2a/src/push/: claim.rs  delivery.rs  dispatcher.rs  mod.rs  secret.rs  ssrf.rs
crates/turul-a2a/src/server/: in_flight.rs  mod.rs  obs.rs  spawn.rs
crates/turul-a2a/src/storage/: atomic.rs  dynamodb.rs  error.rs  event_store.rs  filter.rs  in_memory.rs  mod.rs  parity_tests.rs  postgres.rs  sqlite.rs  terminal_cas.rs  traits.rs
crates/turul-a2a/src/streaming/: mod.rs  replay.rs
crates/turul-a2a/tests/: adr015_skill_security_tests.rs  adr017_tests.rs  adr018_tests.rs  auth_tests.rs  auth_wire_tests.rs  builder_merge_tests.rs  cancellation_tests.rs  d3_streaming_tests.rs  distributed_tests.rs  e2e_tcp_tests.rs  e2e_tests.rs  grpc_tests.rs  handler_tests.rs  jsonrpc_tests.rs  push_delivery_integration.rs  push_dispatcher_server_tests.rs  route_tests.rs  runtime_substrate_tests.rs  send_mode_tests.rs  spec_compliance.rs  sse_tests.rs  transport_compliance_tests.rs
crates/turul-jwt-validator/: Cargo.toml  README.md
crates/turul-jwt-validator/src/: lib.rs
crates/turul-jwt-validator/tests/: jwt_e2e.rs
docs/: IMPLEMENTATION-PLAN-0.1.4.md  IMPLEMENTATION-PLAN-grpc.md  e2e-test-strategy.md
docs/adr/: ADR-001-proto-first-architecture.md  ADR-002-wrapper-boundary-and-validation-strategy.md  ADR-003-storage-trait-design.md  ADR-004-error-model.md  ADR-005-dual-transport-shared-core-handlers.md  ADR-006-sse-streaming-architecture-and-last-chunk-semantics.md  ADR-007-auth-middleware-architecture.md  ADR-008-lambda-adapter-and-streaming-coordination.md  ADR-009-durable-event-coordination.md  ADR-010-executor-event-sink-and-long-running-tasks.md  ADR-011-push-notification-delivery.md  ADR-012-cancellation-propagation.md  ADR-013-lambda-push-delivery-parity.md  ADR-014-grpc-transport.md  ADR-015-skill-level-security-requirements.md  ADR-016-stable-auth-failure-wire-surface.md  ADR-017-return-immediately-and-inline-push-config.md  ADR-018-lambda-durable-executor-sqs.md
examples/: LOCAL_TESTING.md
examples/auth-agent/: Cargo.toml  README.md
examples/auth-agent/src/: main.rs
examples/callback-agent/: Cargo.toml  README.md
examples/callback-agent/src/: lib.rs  main.rs
examples/callback-agent/tests/: smoke.rs
examples/conversation-agent/: Cargo.toml
examples/conversation-agent/src/: lib.rs  main.rs
examples/conversation-agent/tests/: smoke.rs
examples/echo-agent/: Cargo.toml  README.md
examples/echo-agent/src/: main.rs
examples/grpc-agent/: Cargo.toml  README.md
examples/grpc-agent/src/: main.rs
examples/interrupting-agent/: Cargo.toml
examples/interrupting-agent/src/: lib.rs  main.rs
examples/interrupting-agent/tests/: smoke.rs
examples/lambda-agent/: Cargo.toml  README.md
examples/lambda-agent/scripts/: smoke.sh
examples/lambda-agent/src/: main.rs
examples/lambda-durable-agent/: Cargo.toml  README.md
examples/lambda-durable-agent/scripts/: life-of-a-task.sh
examples/lambda-durable-agent/src/: main.rs
examples/lambda-durable-single/: Cargo.toml  README.md
examples/lambda-durable-single/scripts/: life-of-a-task.sh
examples/lambda-durable-single/src/: main.rs
examples/lambda-durable-worker/: Cargo.toml
examples/lambda-durable-worker/src/: main.rs
examples/lambda-infra/: README.md  cloudformation.yaml  provision.sh
examples/lambda-infra/terraform/: main.tf  outputs.tf  variables.tf
examples/lambda-scheduled-worker/: Cargo.toml  README.md
examples/lambda-scheduled-worker/src/: main.rs
examples/lambda-stream-worker/: Cargo.toml  README.md
examples/lambda-stream-worker/src/: main.rs
examples/skill-security-agent/: Cargo.toml  README.md
examples/skill-security-agent/src/: main.rs
examples/streaming-agent/: Cargo.toml  README.md
examples/streaming-agent/src/: lib.rs  main.rs
examples/streaming-agent/tests/: smoke.rs
interop/go-sdk/: README.md  go.mod  interop_test.go
interop/python-sdk/: README.md  pyproject.toml  test_interop.py
