[workspace]
resolver = "3"
members = [
  "crates/turul-a2a-proto",
  "crates/turul-a2a-types",
  "crates/turul-a2a",
  "crates/turul-jwt-validator",
  "crates/turul-a2a-auth",
  "examples/echo-agent",
  "examples/auth-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nick Hortovanyi <nick@aussierobots.com.au>"]
license = "GPL-3.0-only"
repository = "https://github.com/aussierobots/turul-a2a"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
tracing = "0.1"

# Proto dependencies
prost = "0.14"
prost-types = "0.14"
pbjson = "0.9"
pbjson-types = "0.9"

# Internal
# HTTP server
axum = { version = "0.8", features = ["json"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
hyper = "1"
http = "1"
http-body-util = "0.1"

# Auth / JWT
jsonwebtoken = "10"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
tracing-subscriber = "0.3"

turul-a2a-proto = { version = "0.1.0", path = "crates/turul-a2a-proto" }
turul-a2a-types = { version = "0.1.0", path = "crates/turul-a2a-types" }
