[workspace]
resolver = "3"
members = [
  "crates/turul-a2a-proto",
  "crates/turul-a2a-types",
  "crates/turul-a2a",
  "crates/turul-jwt-validator",
  "crates/turul-a2a-auth",
  "crates/turul-a2a-client",
  "crates/turul-a2a-aws-lambda",
  "examples/echo-agent",
  "examples/auth-agent",
  "examples/streaming-agent",
  "examples/callback-agent",
  "examples/grpc-agent",
  "examples/skill-security-agent",
  "examples/lambda-agent",
  "examples/lambda-stream-worker",
  "examples/lambda-scheduled-worker",
]

[workspace.package]
version = "0.1.8"
edition = "2024"
authors = ["Nick Hortovanyi <nick@aussierobots.com.au>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aussierobots/turul-a2a"
homepage = "https://github.com/aussierobots/turul-a2a"
keywords = ["a2a", "agent", "protocol", "async", "tokio"]
categories = ["network-programming", "asynchronous", "web-programming::http-server", "api-bindings"]
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
url = "2"
tracing = "0.1"

# Proto dependencies
prost = "0.14"
prost-types = "0.14"
pbjson = "0.9"
pbjson-types = "0.9"

# gRPC (ADR-014; feature-gated, default off)
tonic = "0.14"
tonic-prost = "0.14"
tonic-types = "0.14"
tonic-reflection = "0.14"
tonic-health = "0.14"
tonic-prost-build = "0.14"
tonic-build = "0.14"

# Internal
# HTTP server
axum = { version = "0.8", features = ["json"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
hyper = "1"
http = "1"
http-body-util = "0.1"

# Auth / JWT
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "query"] }
tracing-subscriber = { version = "0.3", features = ["registry"] }

# Secrets — kept out of turul-a2a-types so the protocol/types crate stays lightweight
secrecy = "0.10"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "json"] }
aws-config = "1"
aws-sdk-dynamodb = "1"

# Lambda
lambda_http = "1"
lambda_runtime = "1"
aws_lambda_events = { version = "1.1", default-features = false, features = ["dynamodb", "eventbridge"] }

# Testing / crypto
rsa = { version = "0.9", features = ["pem"] }
rand = "0.10"
base64 = "0.22"
wiremock = "0.6"

# Misc
bytes = "1"

turul-a2a-proto = { version = "0.1.8", path = "crates/turul-a2a-proto" }
turul-a2a-types = { version = "0.1.8", path = "crates/turul-a2a-types" }
