[package]
name = "turul-a2a-auth"
description = "Auth middleware for turul-a2a: Bearer/JWT and API Key"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
turul-a2a = { path = "../turul-a2a" }
turul-a2a-proto = { workspace = true }
turul-jwt-validator = { path = "../turul-jwt-validator" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
jsonwebtoken = "9"
