[package]
name = "turul-a2a-auth"
description = "Auth middleware for turul-a2a: Bearer/JWT and API Key"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
turul-a2a = { version = "0.1.5", path = "../turul-a2a" }
turul-a2a-proto = { workspace = true }
turul-jwt-validator = { version = "0.1.5", path = "../turul-jwt-validator" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
jsonwebtoken = { workspace = true }
