[package]
name = "turul-a2a-aws-lambda"
description = "AWS Lambda adapter for turul-a2a — thin wrapper over the same axum Router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
dynamodb = ["turul-a2a/dynamodb"]

[dependencies]
turul-a2a = { path = "../turul-a2a" }
turul-a2a-types = { workspace = true }
turul-a2a-proto = { workspace = true }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
