[package]
name = "turul-a2a-aws-lambda"
description = "AWS Lambda adapter for turul-a2a — thin wrapper over the same axum Router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = []
dynamodb = ["turul-a2a/dynamodb"]

[dependencies]
turul-a2a = { version = "0.1.9", path = "../turul-a2a" }
turul-a2a-types = { workspace = true }
turul-a2a-proto = { workspace = true }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
aws_lambda_events = { workspace = true }
serde_dynamo = { version = "4" }
thiserror = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = { workspace = true }
chrono = { workspace = true }
