[package]
name = "turul-a2a-aws-lambda"
description = "AWS Lambda adapter for turul-a2a — thin wrapper over the same axum Router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = []
dynamodb = ["turul-a2a/dynamodb"]
# ADR-018 §Phase 2: durable executor continuation via AWS SQS. Off by
# default — adopters opt in via `LambdaA2aServerBuilder::with_sqs_return_immediately`.
sqs = ["dep:aws-sdk-sqs"]

[dependencies]
turul-a2a = { workspace = true }
turul-a2a-types = { workspace = true }
turul-a2a-proto = { workspace = true }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
aws_lambda_events = { workspace = true }
aws-sdk-sqs = { workspace = true, optional = true }
serde_dynamo = { version = "4" }
thiserror = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = { workspace = true }
