[package]
name = "turul-a2a-client"
description = "A2A Protocol v1.0 client library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
turul-a2a-types = { workspace = true }
turul-a2a-proto = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
wiremock = { workspace = true }
