[package]
name = "turul-a2a-client"
description = "A2A Protocol v1.0 client library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
# gRPC transport (ADR-014). Off by default — HTTP+JSON adopters pay
# zero tonic weight. Enabling transitively activates
# turul-a2a-proto/grpc and exposes an `A2aGrpcClient` in the grpc
# submodule.
grpc = ["dep:tonic", "dep:tonic-prost", "dep:tonic-types", "turul-a2a-proto/grpc"]

[dependencies]
turul-a2a-types = { workspace = true }
turul-a2a-proto = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
tonic-types = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = { workspace = true }
