[package]
name = "turul-a2a-proto"
description = "Generated protobuf types for A2A Protocol v1.0 (lf.a2a.v1)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[build-dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
prost-build = "0.14"
pbjson-build = "0.9"
