[package]
name = "turul-a2a-types"
description = "Ergonomic Rust types for the A2A Protocol v1.0"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
turul-a2a-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
