[package]
name = "turul-a2a"
description = "A2A Protocol v1.0 server framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["in-memory"]
in-memory = []
sqlite = ["sqlx"]
dynamodb = ["aws-config", "aws-sdk-dynamodb"]

[dependencies]
turul-a2a-types = { workspace = true }
turul-a2a-proto = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
sqlx = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }

[dev-dependencies]
sqlx = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
http-body-util = { workspace = true }
hyper = { workspace = true }
