[package]
name = "turul-a2a"
description = "A2A Protocol v1.0 server framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["in-memory"]
in-memory = []
# A2A v0.3 compatibility path for a2a-sdk 0.3.x / Strands clients.
# Opt-in: enables method normalization, root POST route, optional A2A-Version header.
# Removal condition: when a2a-sdk ships v1.0 support.
compat-v03 = []
sqlite = ["sqlx"]
postgres = ["sqlx"]
dynamodb = ["aws-config", "aws-sdk-dynamodb"]

[dependencies]
turul-a2a-types = { workspace = true }
turul-a2a-proto = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
sqlx = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }

[dev-dependencies]
sqlx = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
http-body-util = { workspace = true }
hyper = { workspace = true }
turul-a2a-client = { path = "../turul-a2a-client" }
turul-a2a-auth = { path = "../turul-a2a-auth" }
reqwest = { workspace = true }
