[package]
name = "turul-a2a"
description = "A2A Protocol v1.0 server framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = ["in-memory"]
in-memory = []
# A2A v0.3 compatibility path for a2a-sdk 0.3.x / Strands clients.
# Opt-in: enables method normalization, root POST route, optional A2A-Version header.
# Removal condition: when a2a-sdk ships v1.0 support.
compat-v03 = []
sqlite = ["sqlx"]
postgres = ["sqlx"]
dynamodb = ["aws-config", "aws-sdk-dynamodb"]
# gRPC transport (ADR-014). Off by default — HTTP+JSON adopters pay zero
# tonic weight. Enabling this transitively activates turul-a2a-proto/grpc
# and pulls in the tonic runtime + ErrorInfo support.
grpc = ["dep:tonic", "dep:tonic-prost", "dep:tonic-types", "turul-a2a-proto/grpc"]
# Optional sub-features on top of `grpc` (ADR-014 §2.9).
# Enabling `grpc` alone does NOT pull in either of these.
grpc-reflection = ["grpc", "dep:tonic-reflection"]
grpc-health = ["grpc", "dep:tonic-health"]

[dependencies]
turul-a2a-types = { workspace = true }
turul-a2a-proto = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
sqlx = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
# Secret redaction for credentials/tokens used by later phases.
# Scoped to turul-a2a only; NOT added to turul-a2a-types.
secrecy = { workspace = true }
# Push delivery worker (ADR-011): outbound HTTP client.
reqwest = { workspace = true }
# Retry jitter (push delivery).
rand = { workspace = true }
# gRPC transport (ADR-014); optional — activated by `grpc` feature.
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
tonic-types = { workspace = true, optional = true }
tonic-reflection = { workspace = true, optional = true }
tonic-health = { workspace = true, optional = true }

[dev-dependencies]
sqlx = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
http-body-util = { workspace = true }
hyper = { workspace = true }
turul-a2a-client = { path = "../turul-a2a-client", features = ["grpc"] }
turul-a2a-auth = { path = "../turul-a2a-auth" }
reqwest = { workspace = true }
# Structured-event capture for observability-contract tests (phase A onward).
tracing-subscriber = { workspace = true }
# Mock HTTP server for push-delivery integration tests (ADR-011 §13).
wiremock = { workspace = true }
