[package]
name = "turul-jwt-validator"
description = "Generic JWT validator with JWKS caching — local to turul-a2a, design sourced from turul-mcp-oauth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
