[package]
name = "turul-jwt-validator"
description = "Generic JWT validator with JWKS caching — local to turul-a2a, design sourced from turul-mcp-oauth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
jsonwebtoken = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
wiremock = { workspace = true }
