[package]
name = "grpc-agent"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "grpc-agent"
path = "src/main.rs"

[[bin]]
name = "grpc-client"
path = "src/bin/grpc_client.rs"

[dependencies]
turul-a2a = { path = "../../crates/turul-a2a", features = ["grpc"] }
turul-a2a-client = { path = "../../crates/turul-a2a-client", features = ["grpc"] }
turul-a2a-proto = { path = "../../crates/turul-a2a-proto", features = ["grpc"] }
turul-a2a-types = { path = "../../crates/turul-a2a-types" }
async-trait = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
