[package]
name = "interrupting-agent"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
turul-a2a = { path = "../../crates/turul-a2a" }
turul-a2a-types = { path = "../../crates/turul-a2a-types" }
turul-a2a-proto = { path = "../../crates/turul-a2a-proto" }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
turul-a2a-client = { path = "../../crates/turul-a2a-client" }
axum = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
