[package]
name = "lambda-agent"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"
# cargo-lambda requires the binary to be named `bootstrap`; all three
# Lambda example crates declare the same name. Exclude from rustdoc so
# `cargo doc --workspace` does not collide on the output filename.
doc = false

[dependencies]
turul-a2a = { path = "../../crates/turul-a2a" }
turul-a2a-aws-lambda = { path = "../../crates/turul-a2a-aws-lambda" }
turul-a2a-types = { path = "../../crates/turul-a2a-types" }
turul-a2a-proto = { path = "../../crates/turul-a2a-proto" }
async-trait = { workspace = true }
tokio = { workspace = true }
lambda_runtime = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
